// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JumpNav should not render Optional Information or delete account link 1`] = `
<div
  data-testid="redux-provider"
>
  <div
    data-testid="browser-router"
  >
    <div
      className="jump-nav px-2.25 jump-nav-sm position-sticky pt-3"
    >
      <ul
        className="list-unstyled"
        style={{}}
      >
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#basic-information"
            isActive={[Function]}
            onClick={[Function]}
          >
            Account Information
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#profile-information"
            isActive={[Function]}
            onClick={[Function]}
          >
            Profile Information
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#social-media"
            isActive={[Function]}
            onClick={[Function]}
          >
            Social Media Links
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#site-preferences"
            isActive={[Function]}
            onClick={[Function]}
          >
            Site Preferences
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#linked-accounts"
            isActive={[Function]}
            onClick={[Function]}
          >
            Linked Accounts
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`JumpNav should render Optional Information and delete account link 1`] = `
<div
  data-testid="redux-provider"
>
  <div
    data-testid="browser-router"
  >
    <div
      className="jump-nav px-2.25 jump-nav-sm position-sticky pt-3"
    >
      <ul
        className="list-unstyled"
        style={{}}
      >
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#basic-information"
            isActive={[Function]}
            onClick={[Function]}
          >
            Account Information
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#profile-information"
            isActive={[Function]}
            onClick={[Function]}
          >
            Profile Information
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#demographics-information"
            isActive={[Function]}
            onClick={[Function]}
          >
            Optional Information
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#social-media"
            isActive={[Function]}
            onClick={[Function]}
          >
            Social Media Links
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#site-preferences"
            isActive={[Function]}
            onClick={[Function]}
          >
            Site Preferences
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#linked-accounts"
            isActive={[Function]}
            onClick={[Function]}
          >
            Linked Accounts
          </a>
        </li>
        <li
          className=""
        >
          <a
            aria-current="page"
            className="active"
            href="/#delete-account"
            isActive={[Function]}
            onClick={[Function]}
          >
            Delete My Account
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
